--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,17 @@
 *.dll
 *.so
 *.dylib
+tgbot
 
 # Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# ide
+.vscode
+
+# local env
+.env
+local.sh
